--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,27 +3,18 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
-trigger:
-- master
-
 pool:
-  vmImage: ubuntu-latest
-
-  environment:
   name: Dev
-  resourceType: VirtualMachine
 
-steps:
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
-    options: '-DskipTests'
-  
+jobs:
+- job: Build
+  displayName: Build on Ubuntu
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - script: |
+      sudo apt-get update
+      sudo apt-get install -y maven
+      mvn clean package
+
 
