--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,6 @@ jobs:
   - script: |
       sudo apt-get update
       sudo apt-get install -y maven
-      mvn clean package
-      options: '-DskipTests'
+      mvn clean package -DskipTests
 
 
