--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 pool:
-  name: Dev
+  name: Prueba
 
 jobs:
 - job: Build
@@ -16,5 +16,6 @@ jobs:
       sudo apt-get update
       sudo apt-get install -y maven
       mvn clean package -DskipTests
+      hostname
 
 
