--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
     docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
 
     # Borrar la imagen local
-    docker rmi $devops
+    docker rmi devops
   env:
     AWS_ACCESS_KEY_ID: AKIA5VJLYRITMXVVFLVS
     AWS_SECRET_ACCESS_KEY: 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
