Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,8 @@ name: Docker Image Build and Push
 
 # Variables de entorno
 variables:
-  AWS_ACCESS_KEY_ID: <access-key-id>
-  AWS_SECRET_ACCESS_KEY: <secret-access-key>
+  AWS_ACCESS_KEY_ID: 'AKIA5VJLYRITMXVVFLVS'
+  AWS_SECRET_ACCESS_KEY: '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'
 
 # Pasos del pipeline
 steps:
@@ -20,14 +20,17 @@ steps:
 
   # Autenticarse en ECR
   - script: |
+      displayName: 'Autenticarse en ECR'
       aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
 
   # Subir la imagen de Docker a ECR
   - script: |
+      displayName: 'Subir la imagen de Docker a ECR'
       docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
       docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
 
   # Borrar la imagen de Docker
   - script: |
+      displayName: 'Borrar la imagen de Docker'
       docker rmi my-image:latest
 
