--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,10 @@ steps:
   - script: |
       docker build -t devops .
 
+  # Configurar Cl
+  - script: |
+      aws configure --profile myprofile --cli-input-yaml $AWS_ACCESS_KEY_ID\n$AWS_SECRET_ACCESS_KEY
+      
   # Autenticarse en ECR
   - script: |
       aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
