--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ name: Docker Image Build and Push
 variables:
   AWS_ACCESS_KEY_ID: 'AKIA5VJLYRITMXVVFLVS'
   AWS_SECRET_ACCESS_KEY: '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'
+  AWS_DEFAULT_REGION: 'us-east-1'
 
 # Pasos del pipeline
 steps:
@@ -18,14 +19,16 @@ steps:
   - script: |
       docker build -t devops .
 
-  # Configurar Cl
+  # Configurar Credenciales
   - script: |
       echo "$AWS_ACCESS_KEY_ID\n$AWS_SECRET_ACCESS_KEY" > aws-credentials
       export AWS_SHARED_CREDENTIALS_FILE=$(pwd)/aws-credentials
+      aws configure set default.region $AWS_DEFAULT_REGION
       
   # Autenticarse en ECR
   - script: |
-      aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
+      aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+      aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
 
   # Subir la imagen de Docker a ECR
   - script: |
