Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,9 @@ name: Docker Image Build and Push
 
 # Variables de entorno
 variables:
-  AWS_ACCESS_KEY_ID: 'AKIA5VJLYRITMXVVFLVS'
-  AWS_SECRET_ACCESS_KEY: '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'
-  AWS_DEFAULT_REGION: 'us-east-1'
+  AWS_ACCESS_KEY_ID: AKIA5VJLYRITMXVVFLVS
+  AWS_SECRET_ACCESS_KEY: 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
+  AWS_DEFAULT_REGION: us-east-1
 
 # Pasos del pipeline
 steps:
