--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,9 @@ pool:
 
 # Variables de entorno
 variables:
-  AWS_ACCESS_KEY_ID: AKIA5VJLYRITMXVVFLVS
-  AWS_SECRET_ACCESS_KEY: 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
-  AWS_DEFAULT_REGION: us-east-1
+  AWS_ACCESS_KEY_ID: 'AKIA5VJLYRITMXVVFLVS'
+  AWS_SECRET_ACCESS_KEY: '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'
+  AWS_DEFAULT_REGION: 'us-east-1'
 
 steps:
  # Configurar Credenciales
