--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
         aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
         aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
         aws configure set default.region $AWS_DEFAULT_REGION
+    displayName: 'Configurar Credenciales'
 
   # Construir la imagen de Docker
   - powershell: |
@@ -27,17 +28,21 @@ steps:
   # Construir la imagen de Docker
   - script: |
      docker build -t devops .
+    displayName: 'Construir la imagen de Docker'
       
   # Autenticarse en ECR
   - script: |
       aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
+    displayName: ' Autenticarse en ECR'
 
   # Subir la imagen de Docker a ECR
   - script: |
       docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
       docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
+    displayName: 'Subir la imagen de Docker a ECR'
 
   # Borrar la imagen de Docker
   - script: |
       docker rmi devops:latest
+    displayName: 'Borrar la imagen de Docker'
 
