Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
     displayName: 'Configurar Credenciales'
 
   # Construir la imagen de Docker
-  - powershell: |
+  - script: |
       whoami
     displayName: 'Ejecutar whoami'
     
