--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,27 +3,35 @@ pool:
   agents:
   - name: 'eks-preprod'
 
-# Variables de entorno
-variables:
-  AWS_ACCESS_KEY_ID: AKIA5VJLYRITMXVVFLVS
-  AWS_SECRET_ACCESS_KEY: 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
-  AWS_DEFAULT_REGION: us-east-1
+services:
+  myapp:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    image: devops
+    ports:
+      - "80:80"
 
-steps:
+  variables:
+    AWS_ACCESS_KEY_ID: AKIA5VJLYRITMXVVFLVS
+    AWS_SECRET_ACCESS_KEY: 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
+    AWS_DEFAULT_REGION: us-east-1
 
-  - script: |
-        aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-        aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-        aws configure set default.region $AWS_DEFAULT_REGION
-        sudo docker build -t devops .
-        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
-        docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
-        docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
-        docker rmi devops:latest
+  steps:
 
-  # Construir la imagen de Docker
-  - script: |
-      whoami
-    displayName: 'Ejecutar whoami'
+    - script: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+          aws configure set default.region $AWS_DEFAULT_REGION
+          sudo docker build -t devops .
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
+          docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
+          docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
+          docker rmi devops:latest
+
+    # Construir la imagen de Docker
+    - script: |
+        whoami
+      displayName: 'Ejecutar whoami'
 
 
