--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
                 aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
                 salida=$(echo $?)
                 if [[ $salida -eq 0 ]]; then
-                  sudo docker build -t devops .
+                  docker build --no-cache -t devops .
                   salida=$(echo $?)
                   if [[ $salida -eq 0 ]]; then
                     docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
