--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,28 +11,35 @@ variables:
 steps:
 
   - script: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+          mvn clean package -DskipTests
           salida=$(echo $?)
           if [[ $salida -eq 0 ]]; then
-            aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+            aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
             salida=$(echo $?)
             if [[ $salida -eq 0 ]]; then
-              aws configure set default.region $AWS_DEFAULT_REGION
+              aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
               salida=$(echo $?)
               if [[ $salida -eq 0 ]]; then
-                aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
+                aws configure set default.region $AWS_DEFAULT_REGION
                 salida=$(echo $?)
                 if [[ $salida -eq 0 ]]; then
-                  docker build --no-cache -t devops .
+                  aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
                   salida=$(echo $?)
                   if [[ $salida -eq 0 ]]; then
-                    docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
+                    docker build -t devops .
                     salida=$(echo $?)
                     if [[ $salida -eq 0 ]]; then
-                      docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
+                      docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
                       salida=$(echo $?)
                       if [[ $salida -eq 0 ]]; then
-                        docker rmi devops:latest
+                        docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:latest
+                        salida=$(echo $?)
+                        if [[ $salida -eq 0 ]]; then
+                          docker rmi devops:latest
+                        else
+                          echo "Uno o más comandos fallaron. Deteniendo la ejecución."
+                        fi
+                        exit 1
                       else
                         echo "Uno o más comandos fallaron. Deteniendo la ejecución."
                       fi
@@ -50,14 +57,14 @@ steps:
                 fi
                 exit 1
               else
-                echo "Uno o más comandos fallaron. Deteniendo la ejecución."
+              echo "Uno o más comandos fallaron. Deteniendo la ejecución."
               fi
               exit 1
             else
-             echo "Uno o más comandos fallaron. Deteniendo la ejecución."
+              echo "Uno o más comandos fallaron. Deteniendo la ejecución."
             fi
             exit 1
-          else
+           else
             echo "Uno o más comandos fallaron. Deteniendo la ejecución."
           fi
           exit 1
