--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,48 +20,49 @@ steps:
 
         aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
         if [[ $? -ne 0 ]]; then
-          echo "error "
+          echo "error aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID "
           exit 1
         fi
 
         aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
         if [[ $? -ne 0 ]]; then
-          echo "error "
+          echo "error aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY"
           exit 1
-        fi       
+        fi   
+
         aws configure set default.region $AWS_DEFAULT_REGION
         if [[ $? -ne 0 ]]; then
-          echo "error "
+          echo "error aws configure set default.region $AWS_DEFAULT_REGION"
           exit 1
         fi 
 
         docker build -t devops .
         if [[ $? -ne 0 ]]; then
-          echo "error "
+          echo "error docker build -t devops ."
           exit 1
         fi               
         
         aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
         if [[ $? -ne 0 ]]; then
-          echo "error "
+          echo "error aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com"
           exit 1
         fi        
                 
-        docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$Build.BuildNumber
+        docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$BuildNumber
         if [[ $? -ne 0 ]]; then
           echo "error "
           exit 1
         fi  
 
-        docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$Build.BuildNumber
+        docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$BuildNumber
         if [[ $? -ne 0 ]]; then
-          echo "error "
+          echo "error docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$BuildNumber"
           exit 1
         fi                         
 
         docker rmi devops:latest                  
         if [[ $? -ne 0 ]]; then
-          echo "error "
+          echo "error  docker rmi devops:latest                  "
           exit 1
         fi  
 
