--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ steps:
           exit 1
         fi  
         
-        sudo sed -i '26c\image: new_image_name' ~/manifiestos/deploy-rest-service.yaml
+        sudo  cat ~/manifiestos/deploy-rest-service.yaml | sed -i '26c\image: new_image_name'
         if [[ $? -ne 0 ]]; then
           echo "error en el comando sed"
           exit 1
