Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,4 +72,10 @@ steps:
           exit 1
         fi 
 
+        kubectl apply -f manifiestos/deploy-rest-service.yaml
+        if [[ $? -ne 0 ]]; then
+          echo "error en el comando kubectl"
+          exit 1
+        fi 
+
 
