Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,4 +78,11 @@ steps:
           exit 1
         fi 
 
+        command: ["sleep", "30"]
+        kubectl get po -n docker-book
+        if [[ $? -ne 0 ]]; then
+          echo "error en el comando kubectl"
+          exit 1
+        fi 
+
 
