Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ steps:
         command: ["sleep", "30"]
         kubectl get po -n docker-book
         if [[ $? -ne 0 ]]; then
-          echo "error en el comando kubectl"
+          echo "error en el comando kubectl get po"
           exit 1
         fi 
 
