--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,19 +44,19 @@ steps:
         
         aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com
         if [[ $? -ne 0 ]]; then
-          echo "error aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 939079010854.dkr.ecr.us-east-1.amazonaws.com"
+          echo "error aws ecr get-login-password"
           exit 1
         fi        
                 
         docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$(Build.BuildNumber)
         if [[ $? -ne 0 ]]; then
-          echo "error docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$(Build.BuildNumber)"
+          echo "error docker tag"
           exit 1
         fi  
 
         docker push 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$(Build.BuildNumber)
         if [[ $? -ne 0 ]]; then
-          echo "error docker tag devops:latest 939079010854.dkr.ecr.us-east-1.amazonaws.com/devops:$(Build.BuildNumber)"
+          echo "error docker push"
           exit 1
         fi                         
 
